[package]
name = "courier_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = { version = "0.25", features = ["event-stream"] }
crossbeam = "0.8"
url = "2.3"
tokio = { version = "1.24", features = ["full"] }
futures = "0.3"
unicode-segmentation = "1.10.0"
nom = "7.1.3"

